--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
-        "ionic": "^3.12.0",
         "ionic-angular": "3.7.1",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
@@ -40,6 +39,7 @@
     "devDependencies": {
         "@ionic/app-scripts": "3.0.0",
         "@types/core-js": "^0.9.43",
+        "ionic": "3.19.1",
         "typescript": "2.3.4"
     },
     "description": "Simulador de Renda Fixa",
