--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
             "ionic-plugin-keyboard": {}
         },
         "platforms": [
-            "android"
+            "android",
+            "browser"
         ]
     }
 }
